Change java logger